--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -4,6 +4,17 @@ body,html{
 	font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif
 }
 
+.clearfix
+	display: inline-block
+	&:after
+		display: block
+		content: "."
+		display: block
+		height: 0
+		line-height: 0
+		clear: both
+		visibility: hidden
+
 @media(min-device-pixel-ratio: 1.5),(-webkit-min-device-pixel-ratio: 1.5)
 	.border-1px
 		&::after
