--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -8,8 +8,7 @@ body,html{
 	display: inline-block
 	&:after
 		display: block
-		content: "."
-		display: block
+		content: '.'
 		height: 0
 		line-height: 0
 		clear: both
