--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -1,3 +1,3 @@
-@import "./icon.styl";
-@import "./base.styl";
-@import "./mixin.styl";
+@import "./icon.styl"
+@import "./base.styl"
+@import "./mixin.styl"
